--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
-  "devDependencies": {
+  "dependencies": {
     "axios": "^0.15.3",
-    "bootstrap-sass": "^3.3.7",
+    "bulma": "^0.4.1",
     "cross-env": "^3.2.3",
-    "jquery": "^3.1.1",
-    "laravel-mix": "^0.8.3",
+    "laravel-mix": "^0.11.4",
     "lodash": "^4.17.4",
-    "vue": "^2.1.10"
+    "vue": "^2.3.3",
+    "vue-sticky": "^3.1.5"
+  },
+  "devDependencies": {
+    "vuedraggable": "^2.11.0"
   }
 }
