--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
-    "bulma": "^0.4.1",
+    "bulma": "^0.5.3",
     "cross-env": "^3.2.3",
     "laravel-mix": "^0.11.4",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "vue": "^2.3.3",
     "vue-sticky": "^3.1.5"
   },
