--- a/package.json
+++ b/package.json
@@ -8,16 +8,13 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "dependencies": {
-    "axios": "^0.15.3",
-    "bulma": "^0.5.3",
-    "cross-env": "^3.2.3",
-    "laravel-mix": "^0.11.4",
+    "axios": "^0.18",
+    "bulma": "^0.6.2",
+    "cross-env": "^5.1",
+    "laravel-mix": "^2.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
-    "vue": "^2.3.3",
-    "vue-sticky": "^3.1.5"
+    "vue": "^2.5.7"
   },
-  "devDependencies": {
-    "vuedraggable": "^2.11.0"
-  }
+  "devDependencies": {}
 }
