--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "axios": "^0.18",
     "bulma": "^0.6.2",
     "cross-env": "^5.1",
-    "laravel-mix": "^2.0",
+    "laravel-mix": "^4.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "vue": "^2.5.7"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "resolve-url-loader": "3.1.0",
+    "sass": "^1.22.7",
+    "sass-loader": "7.*",
+    "vue-template-compiler": "^2.6.10"
+  }
 }
