--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "dependencies": {
-    "axios": "^0.18",
+    "axios": ">=0.18.1",
     "bulma": "^0.6.2",
     "cross-env": "^5.1",
     "laravel-mix": "^4.0",
-    "lodash": "^4.17.4",
-    "moment": "^2.18.1",
+    "lodash": "^4.17.13",
+    "moment": ">=2.19.3",
     "vue": "^2.5.7"
   },
   "devDependencies": {
