--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bulma": "^0.6.2",
     "cross-env": "^5.1",
     "laravel-mix": "^4.0",
-    "lodash": "^4.17.13",
+    "lodash": ">=4.17.13",
     "moment": ">=2.19.3",
     "vue": "^2.5.7"
   },
