--- a/.env.travis
+++ b/.env.travis
@@ -1,7 +1,7 @@
 APP_ENV=testing
 APP_KEY=SomeRandomString
 
-DB_CONNECTION=mysql
+DB_CONNECTION=mysql_testing
 DB_TEST_DATABASE=quotes_testing
 DB_USERNAME=root
 DB_PASSWORD=
