--- a/.env.chipper
+++ b/.env.chipper
@@ -2,9 +2,9 @@ APP_ENV=testing
 APP_KEY=SomeRandomString
 
 DB_CONNECTION=mysql_testing
-DB_TEST_DATABASE=quotes_testing
-DB_USERNAME=root
-DB_PASSWORD=
+DB_TEST_DATABASE=chipperci
+DB_USERNAME=chipperci
+DB_PASSWORD=secret
 
 CACHE_DRIVER=array
 SESSION_DRIVER=array
