--- a/.env.chipper
+++ b/.env.chipper
@@ -1,8 +1,8 @@
 APP_ENV=testing
 APP_KEY=SomeRandomString
 
-#DB_CONNECTION=mysql_testing
-#DB_TEST_DATABASE=chipperci
+DB_CONNECTION=mysql_testing
+DB_TEST_DATABASE=chipperci
 DB_DATABASE=chipperci
 DB_USERNAME=chipperci
 DB_PASSWORD=secret
