--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,13 @@
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.6",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0",
+        "barryvdh/laravel-debugbar": "~3.0",
+        "codedungeon/phpunit-result-printer": "^0.25.1",
         "filp/whoops": "~2.0",
+        "fzaninotto/faker": "~1.6",
         "laravel/dusk": "~3.0",
-        "barryvdh/laravel-debugbar": "~3.0"
+        "mockery/mockery": "0.9.*",
+        "phpunit/phpunit": "~6.0"
     },
     "autoload": {
         "classmap": [
