--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,13 @@ before_script:
   - composer install --no-interaction
   - php artisan key:generate
   - php artisan migrate --no-interaction -vvv
+  - if [[ -f "yarn.lock" ]]; then
+      yarn
+      yarn dev
+    else
+      npm install --prefer-offline --no-audit
+      npm run dev
+    fi
 
 script:
   - vendor/bin/phpunit --printer Codedungeon\\\PHPUnitPrettyResultPrinter\\\Printer
