--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,4 @@ before_script:
 
 script:
   - vendor/bin/phpunit --printer Codedungeon\\\PHPUnitPrettyResultPrinter\\\Printer
+  - php artisan dusk
