--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ services:
   - mysql
 
 before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - ./vendor/laravel/dusk/bin/chromedriver-linux &
   - cp .env.travis .env
   - sudo mysql -e 'CREATE DATABASE quotes_testing;'
   - composer self-update
