Attempt to get dusk working on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+sudo: required
+
 dist: bionic
 
 language: php
@@ -5,8 +7,8 @@ language: php
 php:
   - 7.2
 
-#addons:
-#  chrome: stable
+addons:
+  chrome: stable
 
 services:
   - mysql
@@ -17,14 +19,14 @@ install:
   - travis_retry composer install --no-interaction --prefer-dist --no-suggest
   - php artisan key:generate
   - php artisan migrate --no-interaction -vvv
+  - yarn
+  - npm run production
 
 before_script:
-  - yarn
-  - yarn dev
-#  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-#  - php artisan serve &
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+  - php artisan serve &
 
 
 script:
-  - vendor/bin/phpunit --printer Codedungeon\\\PHPUnitPrettyResultPrinter\\\Printer
-#  - php artisan dusk
+#  - vendor/bin/phpunit --printer Codedungeon\\\PHPUnitPrettyResultPrinter\\\Printer
+  - php artisan dusk
