--- a/.env.travis
+++ b/.env.travis
@@ -1,5 +1,6 @@
 APP_ENV=local
 APP_KEY=SomeRandomString
+APP_URL=http://127.0.0.1:8000
 
 DB_CONNECTION=mysql_testing
 DB_TEST_DATABASE=quotes_testing
@@ -7,5 +8,5 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 CACHE_DRIVER=array
-SESSION_DRIVER=array
+SESSION_DRIVER=file
 QUEUE_DRIVER=sync
