--- a/.env.chipper
+++ b/.env.chipper
@@ -1,5 +1,6 @@
 APP_ENV=testing
 APP_KEY=SomeRandomString
+APP_URL=http://127.0.0.1:8000
 
 DB_CONNECTION=mysql_testing
 DB_TEST_DATABASE=chipperci
@@ -8,5 +9,5 @@ DB_USERNAME=chipperci
 DB_PASSWORD=secret
 
 CACHE_DRIVER=array
-SESSION_DRIVER=array
+SESSION_DRIVER=file
 QUEUE_DRIVER=sync
