--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,35 @@
 dist: bionic
 
-language: php
-
-php:
-  - 7.2
-
 addons:
   chrome: stable
 
 services:
   - mysql
 
-install:
-  - cp .env.travis .env
-  - sudo mysql -e 'CREATE DATABASE quotes_testing;'
-  - travis_retry composer install --no-interaction --prefer-dist --no-suggest
-  - php artisan key:generate
-  - php artisan migrate --no-interaction -vvv
-  - yarn
-  - npm run production
+matrix:
+  include:
+    - language: php
+      php:
+        - 7.2
 
-before_script:
-  - phpenv config-rm xdebug.ini
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-  - php artisan serve &
+      install:
+        - cp .env.travis .env
+        - sudo mysql -e 'CREATE DATABASE quotes_testing;'
+        - travis_retry composer install --no-interaction --prefer-dist --no-suggest
+        - php artisan key:generate
+        - php artisan migrate --no-interaction -vvv
+        - yarn
+        - npm run production
 
-script:
-  - vendor/bin/phpunit --printer Codedungeon\\\PHPUnitPrettyResultPrinter\\\Printer
-  - php artisan dusk
+      before_script:
+        - phpenv config-rm xdebug.ini
+        - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+        - php artisan serve &
+
+      script:
+        - vendor/bin/phpunit --printer Codedungeon\\\PHPUnitPrettyResultPrinter\\\Printer
+        - php artisan dusk
+    - language: node_js
+      node_js:
+        - 6.9
+      cache: yarn
