Create tests for quotes and authors

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,9 @@
         }
     },
     "autoload-dev": {
+        "files": [
+            "tests/utilities/functions.php"
+        ],
         "psr-4": {
             "Tests\\": "tests/"
         }
