--- a/.env.chipper
+++ b/.env.chipper
@@ -3,6 +3,7 @@ APP_KEY=SomeRandomString
 
 DB_CONNECTION=mysql_testing
 #DB_TEST_DATABASE=chipperci
+DB_TEST_DATABASE=quotes_testing
 DB_DATABASE=chipperci
 DB_USERNAME=chipperci
 DB_PASSWORD=secret
