Change db criteria

--- a/.env.chipper
+++ b/.env.chipper
@@ -5,8 +5,10 @@ DB_CONNECTION=mysql_testing
 #DB_TEST_DATABASE=chipperci
 DB_TEST_DATABASE=quotes_testing
 DB_DATABASE=chipperci
-DB_USERNAME=chipperci
-DB_PASSWORD=secret
+#DB_USERNAME=chipperci
+#DB_PASSWORD=secret
+DB_USERNAME=root
+DB_PASSWORD=
 
 CACHE_DRIVER=array
 SESSION_DRIVER=file
