--- a/.env.chipper
+++ b/.env.chipper
@@ -1,12 +1,8 @@
 APP_ENV=testing
 APP_KEY=SomeRandomString
 
-#DB_CONNECTION=mysql_testing
-#DB_TEST_DATABASE=chipperci
-#DB_TEST_DATABASE=quotes_testing
-#DB_DATABASE=chipperci
-#DB_USERNAME=chipperci
-#DB_PASSWORD=secret
+DB_CONNECTION=mysql_testing
+DB_TEST_DATABASE=quotes_testing
 
 CACHE_DRIVER=array
 SESSION_DRIVER=file
