--- a/.env.chipper
+++ b/.env.chipper
@@ -2,6 +2,7 @@ APP_ENV=testing
 APP_KEY=SomeRandomString
 
 DB_CONNECTION=mysql_testing
+DB_HOST=mysql
 DB_TEST_DATABASE=quotes_testing
 
 CACHE_DRIVER=array
