--- a/.env.chipper
+++ b/.env.chipper
@@ -1,8 +1,7 @@
 APP_ENV=testing
 APP_KEY=SomeRandomString
 
-DB_CONNECTION=mysql_testing
-DB_TEST_DATABASE=quotes_testing
+#DB_TEST_DATABASE=quotes_testing
 
 CACHE_DRIVER=array
 SESSION_DRIVER=file
