--- a/.env.chipper
+++ b/.env.chipper
@@ -1,7 +1,7 @@
 APP_ENV=testing
 APP_KEY=SomeRandomString
 
-#DB_TEST_DATABASE=quotes_testing
+DB_TEST_DATABASE=quotes_testing
 
 CACHE_DRIVER=array
 SESSION_DRIVER=file
