--- a/.env.testing
+++ b/.env.testing
@@ -1,5 +1,7 @@
 APP_ENV=testing
 APP_KEY=SomeRandomString
+APP_URL=http://127.0.0.1:8000
 
 DB_CONNECTION=mysql_testing
+DB_DATABASE=quotes_testing
 DB_TEST_DATABASE=quotes_testing
